# yearly-insights-parser

./: README.md  pyproject.toml
yearly_insights_parser/: __init__.py  main.py  prompts.py
